--- a/x-maf_league/styles/main.css
+++ b/x-maf_league/styles/main.css
@@ -1,9 +1,12 @@
+/* Custom fonts */
 @import url(../fonts/forte.TTF);
 
+/* Body */
 body {
     margin: 0px;
 }
 
+/* Header */
 .header {
     background-color: black;
     text-align: center;
@@ -13,7 +16,8 @@ body {
 .header img {
     width: 800px;
 }
-
+/* End Header */
+/* Sub_menu */
 .sub_header, .scedule_ordering {
     text-align: center;
 }
@@ -49,7 +53,7 @@ li {
 
 li a {
     display: block;
-    color:blueviolet;
+    color:cyan;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -62,6 +66,11 @@ li a {
     color: black;
 }
 
+a.active{
+    border-bottom: solid 3px cyan;
+    color: cyan;
+}
+
 .schedule_content {
     background-color: black;
     height: 100%;
@@ -70,7 +79,7 @@ li a {
 
 .schedule_content table {
     font-family: cursive;
-    color:cornflowerblue;
+    color: goldenrod;
     margin: auto;
     font-size: 30px;
     text-align: center;
@@ -85,28 +94,22 @@ h2 {
     margin: 0px;
 }
 
-.schedule_content table a, .schedule_content table p {
-    text-decoration: none;
-    color:cornflowerblue;
-}
-
-.schedule_content table a:visited {
-    color:cornflowerblue;
-}
-
-.schedule_content table td {
-    vertical-align: top;
+.schedule_content table td:nth-child(1) {
     min-width: 400px;
 }
 
+.old_date {
+    display: none;
+}
+
 .old_date, .old_date a,.old_gray a:visited {
-    color: gray !important;
+    color: darkgray;
+    text-decoration: none;
 }
 
 .touranment_place {
     font-size: 15px;
     margin: 0px;
-    color: aqua !important;
 }
 
 .rating_content {
