quick fix math round and mobile table view

--- a/thomas-corner/styles/main.css
+++ b/thomas-corner/styles/main.css
@@ -57,7 +57,9 @@ table.thomas_rating {
     margin: 20px;
     font-size: 20px;
     text-align: center;
+    overflow: scroll;
     border: double 5px cornflowerblue;
+    display: block;
 }
 
 table.thomas_rating tr {
