wild hunt was removed from schedule

--- a/x-maf_league/styles/main.css
+++ b/x-maf_league/styles/main.css
@@ -80,7 +80,7 @@ a.active{
 .schedule_content table {
     font-family: cursive;
     color: goldenrod;
-    margin: auto;
+    margin: 30px auto;
     font-size: 30px;
     text-align: center;
 }
