--- a/x-maf_league/styles/main.css
+++ b/x-maf_league/styles/main.css
@@ -152,3 +152,20 @@ h2 {
     height: 40px;
     border-radius: 50%;
 }
+
+.full_table {
+    text-align: center;
+    margin-left: 30px;
+}
+
+.full_table a {
+    border: solid 1px white;
+    padding: 15px;
+    text-align: center;
+    font-size: 25px;
+    text-decoration: none;
+    color: white;
+    width: 150px;
+    margin: 40px auto 50px;
+    display: inline-block;
+}
