[AH] Zebulon font was added

--- a/timetable/styles/main.css
+++ b/timetable/styles/main.css
@@ -1,3 +1,5 @@
+@import url(../fonts/Zebulon.otf);
+
 body {
     text-align: center;
     background-image: url('https://www.muralswallpaper.co.uk/app/uploads/Clean-white-brick-wallpaper-mural-1024x664-825x535.jpg');
