[AH] Zebulon font was added

--- a/timetable/styles/main.css
+++ b/timetable/styles/main.css
@@ -1,4 +1,8 @@
-@import url(../fonts/Zebulon.otf);
+
+@font-face {
+    font-family: Zebulon;
+    scr: url(../fonts/Zebulon.otf);
+}
 
 body {
     text-align: center;
