[XML] Antihype results + link color fix

--- a/x-maf_league/styles/main.css
+++ b/x-maf_league/styles/main.css
@@ -244,4 +244,8 @@ div.future {
 .tournament_date {
     float: right;
 }
+
+.tournament_metadata a {
+    color: white;
+}
 /* END new tournament */
