--- a/timetable/styles/main.css
+++ b/timetable/styles/main.css
@@ -18,7 +18,6 @@ h1 {
 
 div div div div {
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.1);
     margin: 30px 100px;
 }
 
@@ -81,4 +80,9 @@ a.active  {
 
 #player {
     min-width: 200px;
+}
+
+.total {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
 }
