--- a/x-maf_league/styles/main.css
+++ b/x-maf_league/styles/main.css
@@ -146,6 +146,11 @@ div.old_date {
     margin: auto;
 }
 
+.rating_header {
+    font-size: 33px !important;
+    height: 100px !important;
+}
+
 .rating_content td:nth-child(1) {
     min-width: 30px;
 }
@@ -154,8 +159,12 @@ div.old_date {
     min-width: 50px;
 }
 
-.rating_content td:nth-child(3) {
+.rating_content td:nth-child(3), .rating_content td:nth-child(4) {
     min-width: 200px;
+}
+
+.rating_content td:nth-child(4), .rating_content td:nth-child(5)  {
+    text-align: center;
 }
 
 .rating_content tr {
