--- a/thomas-corner/styles/main.css
+++ b/thomas-corner/styles/main.css
@@ -232,3 +232,20 @@ a.active  {
     font-weight: 600;
 }
 /* END ABOUT section */
+/* STRIMING */
+.striming_wrapper {
+    text-align: center;
+}
+
+.striming_wrapper h2 {
+    font-size: 60px;
+    color: white;
+    font-family: fantasy;
+    margin: 50px 0px 0px;
+}
+
+.striming_wrapper iframe {
+    padding: 30px 0px;
+}
+
+/* END STRIMING */
