--- a/x-maf_league/styles/main.css
+++ b/x-maf_league/styles/main.css
@@ -22,6 +22,11 @@ body {
     background-color: black;
 }
 
+.home_body {
+    background-image: url(https://www.tokkoro.com/picsup/3335125-night-city-top-view-buildings-clouds.jpg);
+    background-size: cover;
+}
+
 a {
     text-decoration: none;
 }
@@ -292,3 +297,35 @@ div.future {
     color: white;
 }
 /* END new tournament */
+
+.t {
+    width: 100%;
+    height: 300px;
+    text-align: center;
+}
+
+.t h1 {
+    color: darkviolet;
+    margin: 0px;
+    font-size: 100px;
+}
+
+.t h2 {
+    color: white;
+    font-size: 35px;
+}
+
+
+/* STREAM */
+.stream_content {
+    text-align: center;
+}
+
+.stream_content h2 {
+    margin-top: 40px;
+}
+
+.stream_content iframe {
+    margin: 60px 0px 40px 0px;
+}
+/* END STREAM */
