--- a/thomas-corner/styles/main.css
+++ b/thomas-corner/styles/main.css
@@ -23,9 +23,30 @@ body {
 
 /* header */
 .header {
-    height: 230px;
-    text-align: center;
-    background-color: black;
+    height: 300px;
+}
+
+@media only screen and (max-width: 1700px) {
+    .header {
+        height: 230px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .header {
+        height: 150px;
+    }
+}
+@media only screen and (max-width: 700px) {
+    .header {
+        height: 130px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .header {
+        height: 100px;
+    }
 }
 
 .header h1 {
