--- a/thomas-corner/styles/evenings.css
+++ b/thomas-corner/styles/evenings.css
@@ -71,11 +71,12 @@ table.thomas_archive td {
 .evening_wrapper {
     display: inline-block;
     width: 100%;
+    padding-bottom: 50px;
 }
 
 @media only screen and (max-width: 981px) {
     .evening_wrapper {
-        padding: 0;
+        padding: 0 0 50px 0;
     }
 }
 
@@ -86,5 +87,9 @@ table.thomas_archive td {
     font-size: 25px;
     font-family: Zebulon;
     cursor: pointer;
+}
+
+.ng-hidden {
+    display: none;
 }
 
