[SL] Style updates

--- a/sakura-league/etc/styles/fantasy.css
+++ b/sakura-league/etc/styles/fantasy.css
@@ -1,15 +1,47 @@
+body {
+    padding: 0;
+    margin: 0;
+}
+
+p {
+
+    font-family: Zebulon;
+    color: white;
+    display: grid;
+}
+
+.main-wrapper {
+    background-image: url(../images/main-background_1.jpg);
+    background-size: cover;
+    display: inline-block;
+}
+
+@font-face {
+    font-family: Zebulon;
+    src: url(../../etc/fonst/zebulon_new.ttf);
+}
+
+.color-wrapper {
+    background-color: rgba(0,0,0,0.6);
+    display: inline-block;
+}
+
 .player-list-wrapper {
     width: 60%;
     float: left;
+    text-align: center;
+    border-right: solid 1px white;
+    box-sizing: border-box;
 }
 
 .player-list {
     display: inline-block;
     padding: 10px;
     text-align: center;
+    width: 150px;
 }
 
-.player-list_image {
+.player-list img {
     width: 100px;
     height: 100px;
     cursor: pointer;
@@ -18,7 +50,7 @@
 }
 
 .selected-player {
-  border: solid 3px green;
+  border: solid 3px green !important;
 }
 
 .selected-player_text {
@@ -28,7 +60,7 @@
 .unavailable-player {
     pointer-events: none;
     cursor: default;
-    border: solid 3px red;
+    border: solid 3px red !important;
 }
 
 .unavailable-player_text {
@@ -44,15 +76,38 @@
 .my-team {
     text-align: center;
     display: inline-block;
-    width: 35%;
+    width: 40%;
 }
 
-.my-team p {
-    font-size: 30px;
+.my-team > p,
+.player-list-wrapper > p {
+    font-size: 40px;
     font-weight: bold;
+    color: white;
+    margin: 50px 0 80px;
 }
 
 .my-team img {
     width: 200px;
     height: 200px;
+}
+
+.team-list {
+    display: inline-block;
+    padding: 10px;
+    text-align: center;
+    width: 250px;
+}
+
+.team-list img {
+    width: 200px;
+    height: 200px;
+    border-radius: 90%;
+    border: solid 3px white;
+}
+
+.team-list p {
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
 }
