--- a/sakura-league/etc/styles/fantasy.css
+++ b/sakura-league/etc/styles/fantasy.css
@@ -18,7 +18,7 @@ p {
 
 @font-face {
     font-family: Zebulon;
-    src: url(../../etc/fonst/zebulon_new.ttf);
+    src: url(../../etc/fonts/zebulon_new.ttf);
 }
 
 .color-wrapper {
