--- a/sakura-league/etc/styles/fantasy.css
+++ b/sakura-league/etc/styles/fantasy.css
@@ -39,6 +39,7 @@ p {
     padding: 10px;
     text-align: center;
     width: 150px;
+    height: 200px;
 }
 
 .player-list p {
@@ -52,10 +53,6 @@ p {
     margin: 50px 0 80px;
 }
 
-.player-list_total-score {
-
-}
-
 .player-list img {
     width: 100px;
     height: 100px;
@@ -64,18 +61,26 @@ p {
     border: solid 2px white;
 }
 
-.selected-player {
-  border: solid 2px green !important;
-}
-
 .selected-player_text {
-    color: green
+    color: limegreen;
   }
 
 .unavailable-player {
     pointer-events: none;
     cursor: default;
-    border: solid 2px red !important;
+    width: 104px;
+    height: 104px;
+    position: relative;
+    bottom: 184px;
+    left: 23px;
+    z-index: 3;
+    border: solid 2px red;
+    box-sizing: border-box;
+    border-radius: 90%;
+    background-image: url(https://i.dlpng.com/static/png/6658483_preview.png);
+    background-size: 70px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .unavailable-player_text {
@@ -86,6 +91,22 @@ p {
     display: inline-block;
     font-size: 25px;
     font-weight: bold;
+}
+
+.selected-player {
+    width: 104px;
+    height: 104px;
+    position: relative;
+    bottom: 184px;
+    left: 23px;
+    border: solid 2px limegreen;
+    box-sizing: border-box;
+    border-radius: 90%;
+    background-image: url(https://www.freeiconspng.com/thumbs/checkmark-png/checkmark-symbol-png-background-12.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    cursor: pointer;
 }
 
 .my-team {
